# Cammy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  LICENSE-MIT  PRODUCT.md  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  site.yml
business/: Business-Plan.docx  Launch-Roadmap.docx  Pitch-Deck.pptx
crates/core/: Cargo.toml
crates/core/src/: absence.rs  analytics.rs  anomaly.rs  api.rs  archive_pull.rs  ask.rs  attributes.rs  audio.rs  auth.rs  db.rs  deterrence.rs  digest.rs  evidence.rs  gait.rs  genai.rs  go2rtc.rs  health.rs  homekit.rs  import.rs  lens.rs  lib.rs  licensing.rs  lpr.rs  main.rs  mqtt.rs  notify.rs  offsite.rs  onvif_events.rs  parcel.rs  pipeline.rs  posture.rs  proc.rs  ptz.rs  push.rs  record.rs  residential.rs  schedule.rs  severity.rs  sigv4.rs  smart.rs  (+10 more)
crates/desktop/: Cargo.toml  sign.ps1  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/installer/: gen_installer_images.py
crates/desktop/src/: main.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/facerec/: Cargo.toml
crates/facerec/examples/: probe.rs
crates/facerec/src/: lib.rs
crates/motion/src/: lib.rs
crates/pose/: Cargo.toml
crates/pose/src/: lib.rs
crates/recorder/src/: lib.rs
crates/spike-detect/: README.md
crates/spike-detect/src/: main.rs
crates/spike-live/src/: main.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: homography.rs  lib.rs
deploy/: Caddyfile.example  zoomy.service
docs/: 01-research-and-architecture.md  02-competitor-feature-matrix.md  03-mqtt-and-webhooks.md  04-ux-ui-redesign-and-roadmap.md  05-residential-analytics-suite.md  06-competitor-refresh-2026.md  07-code-review-2026-07-01-findings.md  08-competitor-parity-2026-07.md  09-licensing-and-monetization.md  TROUBLESHOOTING.md  agent-task-homekit-v1.md  agent-task-phase2-3-remainder.md  agent-task-windows-seamless.md  roadmap-recon-2026-07-16.json
integrations/homeassistant/: README.md  hacs.json
integrations/homeassistant/cammy/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py
integrations/homeassistant/cammy/translations/: en.json
scripts/: fulfilment_server.py  license_sign.py  ls_setup.py  validate_go2rtc_norestart.ps1  webhook_listener.py  yamnet_probe.py
site/: config.js  index.html
web/: index.html  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  CameraDetail.tsx  CameraHotspots.tsx  CommandPalette.tsx  CrossTimeline.tsx  Heatmap.tsx  JourneyMap.tsx  License.tsx  LifecycleModal.tsx  LiveVideo.tsx  Notifications.tsx  Onboarding.tsx  PrivacyOverlay.tsx  Timeline.tsx  Wall.tsx  ZoneEditor.tsx  api.ts  eventGroups.ts  icons.tsx  labels.ts  main.tsx  styles.css  theme.ts  ui.tsx
web/src/pages/: Alarms.tsx  Cameras.tsx  Events.tsx  Faces.tsx  Family.tsx  FloorPlan.tsx  Home.tsx  Insights.tsx  Live.tsx  Recordings.tsx  Settings.tsx  Signals.tsx
