[package]
name = "zoomy"
version = "0.3.0"
description = "Cammy core: API + storage + supervisors for go2rtc, recording, and AI detection"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "zoomy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
image.workspace = true
chrono.workspace = true
which.workspace = true
ureq.workspace = true
tower.workspace = true
sha2.workspace = true
sha1.workspace = true
rumqttc.workspace = true
tokenizers.workspace = true
base64.workspace = true
rand.workspace = true
fs2.workspace = true
argon2.workspace = true
axum-server.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
whisper-rs.workspace = true
# Email (SMTP) alarm action. rustls-tls resolves onto ring (our pinned crypto) —
# vetted to NOT pull aws-lc-sys / openssl / CMake. Blocking SmtpTransport.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls", "hostname"] }

detector = { path = "../detector" }
facerec = { path = "../facerec" }
gesture = { path = "../gesture" }
motion = { path = "../motion" }
recorder = { path = "../recorder" }
