[package]
name = "zoomy-desktop"
version = "0.4.0"
description = "Cammy desktop app: Tauri shell embedding the zoomy core"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
ureq.workspace = true

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
# Auto-update from GitHub Releases latest.json (signed; pubkey in tauri.conf.json).
# rustls-tls keeps the no-OpenSSL rule.
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }

zoomy = { path = "../core" }
