[package]
name = "detector"
version = "0.1.0"
description = "YOLOv8 object detection via ONNX Runtime with per-OS GPU execution providers"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
image.workspace = true
ndarray.workspace = true
serde.workspace = true

# Same pinned ort + feature set validated by spike-detect (see CLAUDE.md gotchas):
# `std` gates commit_from_file + Error impls; `copy-dylibs` puts onnxruntime.dll
# next to the exe on Windows.
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
] }

[features]
default = []
# OpenVINO execution provider (Intel iGPU/NPU). OFF by default: the pinned
# `download-binaries` ONNX Runtime does NOT bundle OpenVINO, so enabling this
# needs an ONNX Runtime built with OpenVINO (and the Intel OpenVINO toolkit) —
# an environment/hardware prerequisite, not something CI can satisfy. With the
# feature off, `openvino_available()` reports false and the runtime silently
# falls back to CPU if OpenVINO is ever requested (see `register_openvino`), so
# the default build + CI are completely unaffected.
openvino = ["ort/openvino"]

# --- Per-OS GPU execution providers (same as spike-detect) -----------------
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["directml"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["cuda"] }
